check_output_utf8.txt
    Checking mapmap v0.1.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap)
error[E0308]: mismatched types
   --> crates\mapmap\src\main.rs:367:73
    |
367 |                     self.control_manager.execute_action(Action::GotoCue(id));
    |                                                         --------------- ^^ expected `u32`, found `u64`
    |                                                         |
    |                                                         arguments to this enum variant are incorrect
    |
note: tuple variant defined here
   --> C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap-control\src\shortcuts\shortcuts.rs:165:5
    |
165 |     GotoCue(u32),
    |     ^^^^^^^
help: you can convert a `u64` to a `u32` and panic if the converted value doesn't fit
    |
367 |                     self.control_manager.execute_action(Action::GotoCue(id.try_into().unwrap()));
    |                                                                           ++++++++++++++++++++

For more information about this error, try `rustc --explain E0308`.
error: could not compile `mapmap` (bin "MapFlow") due to 1 previous error
